Chapter3/2.7/manifests/pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-2-7-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-2-7
  template:
    metadata:
      labels:
        app: pingpong-2-7
    spec:
      containers:
        - name: pingpong-2-7
          image: carlossss1011/2_7_pingpong
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pingpong-2-7-svc
  namespace: exercises
spec:
  selector:
    app: pingpong-2-7
  ports:
    - protocol: TCP
      port: 2010
      targetPort: 3000
